fix photo cropping; add grady's

--- a/styles.css
+++ b/styles.css
@@ -235,8 +235,6 @@ body {
 .photo-item img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
-    transition: opacity 0.3s;
 }
 
 .photo-item img.lazy-load {
